--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "dayjs": "^1.11.7",
+    "db": "^4.0.1",
+    "generate": "^0.14.0",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
