--- a/package.json
+++ b/package.json
@@ -22,9 +22,20 @@
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
     "generate": "^0.14.0",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-chained-backend": "^4.2.0",
+    "i18next-http-backend": "^2.2.0",
+    "i18next-localstorage-backend": "^4.1.1",
+    "i18next-locize-backend": "^6.2.1",
+    "immer": "^10.0.1",
     "next": "^13.2.4",
+    "next-i18next": "^13.2.2",
+    "next-translate": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
+    "react-intl": "^6.4.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
