--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@upstash/ratelimit": "^0.4.2",
+    "@upstash/redis": "^1.20.4",
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
     "generate": "^0.14.0",
