--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-translate": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
     "react-intl": "^6.4.1",
     "superjson": "1.12.2",
