fix syntax for build

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.16.2",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
@@ -36,6 +37,7 @@
     "next-translate": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
     "react-intl": "^6.4.1",
