--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "i18next-localstorage-backend": "^4.1.1",
     "i18next-locize-backend": "^6.2.1",
     "immer": "^10.0.1",
+    "move-file": "^3.1.0",
     "next": "^13.2.4",
     "next-i18next": "^13.2.2",
     "next-translate": "^2.0.5",
