--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "typecheck":"tsc --noEmit"
+    "type-check":"tsc --noEmit"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.16.4",
