--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "type-check":"tsc --noEmit"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.16.4",
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.13.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.29.3",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
