--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "next start",
     "type-check": "tsc --noEmit"
   },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
+  },
   "dependencies": {
     "@clerk/nextjs": "^4.16.4",
     "@headlessui/react": "^1.7.14",
@@ -45,6 +48,7 @@
     "react-i18next": "^12.2.0",
     "react-intl": "^6.4.1",
     "superjson": "1.12.2",
+    "ts-node": "^10.9.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
