--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
     "react-intl": "^6.4.1",
+    "react-router-dom": "^6.10.0",
     "superjson": "1.12.2",
     "ts-node": "^10.9.1",
     "zod": "^3.21.4"
