--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/server": "^10.20.0",
     "@upstash/ratelimit": "^0.4.2",
     "@upstash/redis": "^1.20.4",
+    "axios": "^1.3.6",
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
     "generate": "^0.10.0",
