--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@upstash/redis": "^1.20.4",
     "aws-sdk": "^2.1365.0",
     "axios": "^1.3.6",
+    "b64-to-blob": "^1.2.19",
+    "canvas-to-blob": "^1.0.0",
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
     "framer-motion": "^10.12.4",
