--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.13.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-table": "^8.8.5",
@@ -72,6 +73,7 @@
     "react-icons": "^4.8.0",
     "react-intl": "^6.4.1",
     "react-map-gl": "^7.0.23",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "superjson": "1.12.2",
     "ts-node": "^10.9.1",
