--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-map-gl": "^7.0.23",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "sharp": "^0.32.1",
     "superjson": "1.12.2",
     "ts-node": "^10.9.1",
     "use-file-picker": "^1.6.1",
