--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
@@ -26,6 +29,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^3.1.0",
+    "@next/bundle-analyzer": "^13.3.2",
     "@prisma/client": "^4.13.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.3",
@@ -46,6 +50,7 @@
     "axios": "^1.3.6",
     "b64-to-blob": "^1.2.19",
     "canvas-to-blob": "^1.0.0",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
     "framer-motion": "^10.12.4",
