--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "i18next-locize-backend": "^6.2.1",
     "immer": "^10.0.1",
     "move-file": "^3.1.0",
-    "next": "^13.3.0",
+    "next": "13.4",
     "next-i18next": "^13.2.2",
     "next-translate": "^2.0.5",
     "react": "^18.2.0",
@@ -72,6 +72,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
