--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.4.3",
     "react-intl": "^6.4.1",
     "react-map-gl": "^7.0.23",
     "react-redux": "^8.0.5",
