--- a/package.json
+++ b/package.json
@@ -80,9 +80,12 @@
     "react-intersection-observer": "^9.4.3",
     "react-intl": "^6.4.1",
     "react-map-gl": "^7.0.23",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "sharp": "^0.32.1",
+    "slate": "^0.94.1",
+    "slate-react": "^0.94.0",
     "superjson": "1.12.2",
     "ts-node": "^10.9.1",
     "use-file-picker": "^1.6.1",
