--- a/package.json
+++ b/package.json
@@ -61,11 +61,14 @@
     "i18next-http-backend": "^2.2.0",
     "i18next-localstorage-backend": "^4.1.1",
     "i18next-locize-backend": "^6.2.1",
+    "i18next-sync-fs-backend": "^1.1.1",
     "immer": "^10.0.1",
     "move-file": "^3.1.0",
     "next": "13.4",
     "next-i18next": "^13.2.2",
     "next-translate": "^2.0.5",
+    "quill": "^1.3.7",
+    "quill-emoji": "^0.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^4.2.1",
