--- a/package.json
+++ b/package.json
@@ -20,15 +20,25 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
+    "@ckeditor/ckeditor5-build-balloon": "^35.1.0",
+    "@ckeditor/ckeditor5-build-balloon-block": "^35.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^35.1.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^35.1.0",
+    "@ckeditor/ckeditor5-build-inline": "^35.1.0",
     "@clerk/nextjs": "^4.16.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fullcalendar/daygrid": "^6.1.6",
     "@fullcalendar/interaction": "^6.1.6",
+    "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^6.1.6",
+    "@fullcalendar/timegrid": "^5.11.3",
+    "@googlemaps/js-api-loader": "^1.14.3",
+    "@googlemaps/markerclusterer": "^2.0.11",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^3.1.0",
+    "@left4code/tw-starter": "^3.1.36",
     "@next/bundle-analyzer": "^13.3.2",
     "@prisma/client": "^4.13.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -50,11 +60,15 @@
     "axios": "^1.3.6",
     "b64-to-blob": "^1.2.19",
     "canvas-to-blob": "^1.0.0",
+    "chart.js": "^3.9.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
+    "dropzone": "^6.0.0-beta.2",
+    "flat": "^5.0.2",
     "framer-motion": "^10.12.4",
     "generate": "^0.10.0",
+    "highlight.js": "^11.6.0",
     "i18next": "^22.4.15",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-chained-backend": "^4.2.0",
@@ -63,6 +77,10 @@
     "i18next-locize-backend": "^6.2.1",
     "i18next-sync-fs-backend": "^1.1.1",
     "immer": "^10.0.1",
+    "js-beautify": "^1.14.6",
+    "litepicker": "^2.0.12",
+    "lucide": "^0.90.0",
+    "lucide-react": "^0.88.0",
     "move-file": "^3.1.0",
     "next": "13.4",
     "next-i18next": "^13.2.2",
@@ -86,13 +104,24 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-transition-group": "^4.4.5",
     "sharp": "^0.32.1",
+    "simplebar": "^5.3.9",
     "slate": "^0.94.1",
     "slate-react": "^0.94.0",
     "superjson": "1.12.2",
+    "tabulator-tables": "^5.3.4",
+    "tailwind-merge": "^1.12.0",
+    "tiny-slider": "^2.9.4",
+    "tippy.js": "^6.3.7",
+    "toastify-js": "^1.12.0",
+    "tom-select": "^2.2.0",
     "ts-node": "^10.9.1",
     "use-file-picker": "^1.6.1",
-    "zod": "^3.21.4"
+    "xlsx": "^0.18.5",
+    "yup": "^0.32.11",
+    "zod": "^3.21.4",
+    "zoom-vanilla.js": "^2.0.6"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
@@ -107,7 +136,7 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
   },
