fixed like button color, switched to tiptap editor

--- a/package.json
+++ b/package.json
@@ -45,6 +45,15 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-table": "^8.8.5",
+    "@tiptap/extension-bubble-menu": "^2.0.3",
+    "@tiptap/extension-color": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/extension-mention": "^2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@tiptap/suggestion": "^2.0.3",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
     "@trpc/react-query": "^10.20.0",
