--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-table": "^8.8.5",
     "@tiptap/extension-bubble-menu": "^2.0.3",
+    "@tiptap/extension-character-count": "^2.0.3",
     "@tiptap/extension-color": "^2.0.3",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-mention": "^2.0.3",
