emoji picker works

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ckeditor/ckeditor5-build-decoupled-document": "^35.1.0",
     "@ckeditor/ckeditor5-build-inline": "^35.1.0",
     "@clerk/nextjs": "^4.16.4",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fullcalendar/daygrid": "^6.1.6",
@@ -50,6 +52,7 @@
     "@tiptap/extension-color": "^2.0.3",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-mention": "^2.0.3",
+    "@tiptap/extension-placeholder": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "^2.0.3",
@@ -75,6 +78,8 @@
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
     "dropzone": "^6.0.0-beta.2",
+    "emoji-mart": "^5.5.2",
+    "emoji-picker-element": "^1.17.0",
     "flat": "^5.0.2",
     "framer-motion": "^10.12.4",
     "generate": "^0.10.0",
@@ -108,6 +113,7 @@
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
+    "react-input-emoji": "^5.0.2",
     "react-intersection-observer": "^9.4.3",
     "react-intl": "^6.4.1",
     "react-map-gl": "^7.0.23",
