--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@trpc/react-query": "^10.20.0",
     "@trpc/server": "^10.20.0",
     "@types/react": "^18.2.0",
+    "@uploadthing/react": "^3.0.4",
     "@uppy/core": "^3.2.0",
     "@uppy/dashboard": "^3.4.0",
     "@uppy/transloadit": "^3.1.3",
@@ -77,6 +78,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
+    "dompurify": "^3.0.3",
     "dropzone": "^6.0.0-beta.2",
     "emoji-mart": "^5.5.2",
     "emoji-picker-element": "^1.17.0",
@@ -92,7 +94,9 @@
     "i18next-locize-backend": "^6.2.1",
     "i18next-sync-fs-backend": "^1.1.1",
     "immer": "^10.0.1",
+    "isomorphic-dompurify": "^1.5.0",
     "js-beautify": "^1.14.6",
+    "jsdom": "^22.0.0",
     "litepicker": "^2.0.12",
     "lucide": "^0.90.0",
     "lucide-react": "^0.88.0",
@@ -133,6 +137,7 @@
     "toastify-js": "^1.12.0",
     "tom-select": "^2.2.0",
     "ts-node": "^10.9.1",
+    "uploadthing": "^3.0.4",
     "use-file-picker": "^1.6.1",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11",
