--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tiptap/extension-bubble-menu": "^2.0.3",
     "@tiptap/extension-character-count": "^2.0.3",
     "@tiptap/extension-color": "^2.0.3",
+    "@tiptap/extension-image": "^2.0.3",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-mention": "^2.0.3",
     "@tiptap/extension-placeholder": "^2.0.3",
