--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-session": "^0.0.1",
     "react-transition-group": "^4.4.5",
     "sharp": "^0.32.1",
     "simplebar": "^5.3.9",
