修复clerksignout触发错误，登出自动清理用户数据，用户缓存2小时过期，修复用户context为空的错误

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,7 @@
     "**/*.mjs",
     "next-i18next.config.js",
     ".next/types/**/*.ts"
-, "src/pages/api/PostComment"  ],
+, "src/pages/api/PostComment", "truth-engine.config.js"  ],
   "exclude": [
     "node_modules"
   ]
