--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@left4code/tw-starter": "^3.1.36",
     "@next/bundle-analyzer": "^13.3.2",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.29.3",
@@ -77,6 +77,7 @@
     "canvas-to-blob": "^1.0.0",
     "chart.js": "^3.9.1",
     "cross-env": "^7.0.3",
+    "daisyui": "^2.51.6",
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
     "dompurify": "^3.0.3",
@@ -161,7 +162,7 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.14.0",
+    "prisma": "^4.14.1",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
   },
