--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-input-emoji": "^5.0.2",
     "react-intersection-observer": "^9.4.3",
     "react-intl": "^6.4.1",
