--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "move-file": "^3.1.0",
     "next": "13.4",
     "next-i18next": "^13.2.2",
+    "next-pwa": "^5.6.0",
     "next-translate": "^2.0.5",
     "quill": "^1.3.7",
     "quill-emoji": "^0.2.0",
@@ -125,11 +126,13 @@
     "react-intersection-observer": "^9.4.3",
     "react-intl": "^6.4.1",
     "react-map-gl": "^7.0.23",
+    "react-onesignal": "^2.0.4",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-session": "^0.0.1",
     "react-transition-group": "^4.4.5",
+    "request-ip": "^3.3.0",
     "sass": "^1.62.1",
     "sharp": "^0.32.1",
     "simplebar": "^5.3.9",
@@ -152,9 +155,11 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
+    "@types/next-pwa": "^5.6.3",
     "@types/node": "^18.15.12",
     "@types/prettier": "^2.7.2",
     "@types/react-dom": "^18.2.1",
+    "@types/request-ip": "^0.0.37",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.14",
