--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "chart.js": "^3.9.1",
     "cross-env": "^7.0.3",
     "daisyui": "^2.51.6",
+    "dangerously-set-html-content": "^1.0.13",
     "dayjs": "^1.11.7",
     "db": "^4.0.1",
     "dompurify": "^3.0.3",
