--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+public/sw.js
+public/sw.js.map
+public/workbox-327c579b.js
+public/workbox-327c579b.js.map
